--- a/main.css
+++ b/main.css
@@ -1,15 +1,3 @@
-@media only screen and (max-width: 700px) {
-	:root{
-		--nav-padding: 15px;
-		--section-padding: 30px;
-	}
-}
-@media only screen and (min-width: 700px) {
-	:root{
-		--nav-padding: 30px;
-		--section-padding: 50px;
-	}
-}
 *{
 	margin: 0px;
 	padding: 0px;
@@ -29,6 +17,18 @@ body{
 	-moz-text-size-adjust : 100% ;
 	-ms-text-size-adjust : 100% ;
 	text-size-adjust : 100%;
+}
+@media only screen and (max-width: 700px) {
+:root{
+	--nav-padding: 15px;
+	--section-padding: 30px;
+}
+}
+@media only screen and (min-width: 700px) {
+:root{
+	--nav-padding: 30px;
+	--section-padding: 50px;
+}
 }
 header{
 	border-bottom: 0px solid silver;
@@ -54,77 +54,87 @@ section > div{
 	font-size: 16px;
 	line-height: 25px;
 }
-#Personal_Information{
+/*Personal Information*/
+section:nth-of-type(1) {
 	text-indent: 2em;
 	text-align: justify;
 }
+/*Education Experience*/
 @media only screen and (max-width: 700px) {
-	#Education_Experience{
-		display: grid; 
-		grid-template-columns: auto 1fr; 
-		list-style-type: disc;
-		list-style-position: inside;		
-	}
-	#Education_Experience > .begin{
-		display: list-item;
-	}
-	#Education_Experience > .center{
-		text-indent: 1.5em;
-	}
-	#Education_Experience > .end{
-		grid-column-start: 1;
-  		grid-column-end: 3;
-  		text-indent: 1.3em;
-	}
+section:nth-of-type(2){
+	display: grid; 
+	grid-template-columns: auto 1fr; 
+	list-style-type: disc;
+	list-style-position: inside;		
+}
+section:nth-of-type(2) > div:nth-of-type(3n+1){
+	display: list-item;
+}
+section:nth-of-type(2) > div:nth-of-type(3n+2){
+	text-indent: 1.5em;
+}
+section:nth-of-type(2) > div:nth-of-type(3n+3){
+	grid-column-start: 1;
+		grid-column-end: 3;
+		text-indent: 1.3em;
+}
 }
 @media only screen and (min-width: 700px) {
-	#Education_Experience{
-		display: grid; 
-		grid-template-columns: auto auto 1fr; 
-		list-style-type: disc;
-		list-style-position: inside;
-	}
-	#Education_Experience > .begin{
-		display: list-item;
-	}
-	#Education_Experience > .center, .end{
-		text-indent: 2em;
-	}
-}
-#Research_Interests{
+section:nth-of-type(2){
+	display: grid; 
+	grid-template-columns: auto auto 1fr; 
 	list-style-type: disc;
 	list-style-position: inside;
 }
-#Research_Interests > div{
+section:nth-of-type(2) > div:nth-of-type(3n+1){
 	display: list-item;
 }
-#Conference_Papers{
+section:nth-of-type(2) > div:nth-of-type(3n+2){
+	text-indent: 2em;
+}
+section:nth-of-type(2) > div:nth-of-type(3n+3){
+	text-indent: 2em;
+}
+}
+/*Research Interests*/
+section:nth-of-type(3){
 	list-style-type: disc;
 	list-style-position: inside;
 }
-#Conference_Papers > div{
+section:nth-of-type(3) > div{
 	display: list-item;
-	text-align: justify;
-	padding: 5px 0px;
 }
-#Journal_Papers{
+/*Conference Papers*/
+section:nth-of-type(4){
 	list-style-type: disc;
 	list-style-position: inside;
 }
-#Journal_Papers > div{
+section:nth-of-type(4) > div{
 	display: list-item;
 	text-align: justify;
 	padding: 5px 0px;
 }
-#Patents{
+/*Journal Papers*/
+section:nth-of-type(5){
 	list-style-type: disc;
 	list-style-position: inside;
 }
-#Patents > div{
+section:nth-of-type(5) > div{
 	display: list-item;
 	text-align: justify;
 	padding: 5px 0px;
 }
+/*Patents*/
+section:nth-of-type(6){
+	list-style-type: disc;
+	list-style-position: inside;
+}
+section:nth-of-type(6) > div{
+	display: list-item;
+	text-align: justify;
+	padding: 5px 0px;
+}
+/*footer*/
 footer{
 	text-align: center;
 	font-size: 14px;
