--- a/main.css
+++ b/main.css
@@ -2,10 +2,6 @@
 	margin: 0px;
 	padding: 0px;
 }
-a{
-	text-decoration: none;
-	color: inherit;
-}
 html{
 	background-color: silver;
 }
@@ -19,16 +15,24 @@ body{
 	text-size-adjust : 100%;
 }
 @media only screen and (max-width: 700px) {
-:root{
-	--nav-padding: 15px;
-	--section-padding: 30px;
-}
+	:root{
+		--nav-padding: 15px;
+		--section-padding: 30px;
+		--grid-template-columns: auto 1fr;
+		--grid-column: 1 / 3;
+	}
 }
 @media only screen and (min-width: 700px) {
-:root{
-	--nav-padding: 30px;
-	--section-padding: 50px;
+	:root{
+		--nav-padding: 30px;
+		--section-padding: 50px;
+		--grid-template-columns: auto auto 1fr;
+		--grid-column: auto / auto;
+	}
 }
+a{
+	text-decoration: none;
+	color: inherit;
 }
 header{
 	border-bottom: 0px solid silver;
@@ -60,10 +64,9 @@ section:nth-of-type(1) {
 	text-align: justify;
 }
 /*Education Experience*/
-@media only screen and (max-width: 700px) {
 section:nth-of-type(2){
 	display: grid; 
-	grid-template-columns: auto 1fr; 
+	grid-template-columns: var(--grid-template-columns);
 	list-style-type: disc;
 	list-style-position: inside;		
 }
@@ -71,30 +74,11 @@ section:nth-of-type(2) > div:nth-of-type(3n+1){
 	display: list-item;
 }
 section:nth-of-type(2) > div:nth-of-type(3n+2){
-	text-indent: 1.5em;
-}
-section:nth-of-type(2) > div:nth-of-type(3n+3){
-	grid-column-start: 1;
-		grid-column-end: 3;
-		text-indent: 1.3em;
-}
-}
-@media only screen and (min-width: 700px) {
-section:nth-of-type(2){
-	display: grid; 
-	grid-template-columns: auto auto 1fr; 
-	list-style-type: disc;
-	list-style-position: inside;
-}
-section:nth-of-type(2) > div:nth-of-type(3n+1){
-	display: list-item;
-}
-section:nth-of-type(2) > div:nth-of-type(3n+2){
 	text-indent: 2em;
 }
 section:nth-of-type(2) > div:nth-of-type(3n+3){
+	grid-column: var(--grid-column);
 	text-indent: 2em;
-}
 }
 /*Research Interests*/
 section:nth-of-type(3){
