--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ section:nth-of-type(7) > div{
 	padding: 5px 0px;
 }
 
-/*Software Copyright*/
+/*Software Copyrights*/
 section:nth-of-type(8){
 	list-style-type: disc;
 	list-style-position: inside;
