--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ section:nth-of-type(1) {
 }
 
 
-/*Word Experience*/
+/*Work Experience*/
 section:nth-of-type(2){
 	display: grid; 
 	grid-template-columns: var(--grid-template-columns);
@@ -159,6 +159,39 @@ section:nth-of-type(8){
 	list-style-position: inside;
 }
 section:nth-of-type(8) > div{
+	display: list-item;
+	text-align: justify;
+	padding: 5px 0px;
+}
+
+/*Hosted projects*/
+section:nth-of-type(9){
+	list-style-type: disc;
+	list-style-position: inside;
+}
+section:nth-of-type(9) > div{
+	display: list-item;
+	text-align: justify;
+	padding: 5px 0px;
+}
+
+/*involved projects*/
+section:nth-of-type(10){
+	list-style-type: disc;
+	list-style-position: inside;
+}
+section:nth-of-type(10) > div{
+	display: list-item;
+	text-align: justify;
+	padding: 5px 0px;
+}
+
+/*Honors and Awards*/
+section:nth-of-type(11){
+	list-style-type: disc;
+	list-style-position: inside;
+}
+section:nth-of-type(11) > div{
 	display: list-item;
 	text-align: justify;
 	padding: 5px 0px;
