--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ body{
 		--section-padding: 30px;
 		--grid-template-columns: auto 1fr;
 		--grid-column: 1 / 3;
+		--text-indent: 1.4em;
 	}
 }
 @media only screen and (min-width: 700px) {
@@ -28,6 +29,7 @@ body{
 		--section-padding: 50px;
 		--grid-template-columns: auto auto 1fr;
 		--grid-column: auto / auto;
+		--text-indent: 2em;
 	}
 }
 a{
@@ -81,7 +83,7 @@ section:nth-of-type(2) > div:nth-of-type(3n+2){
 }
 section:nth-of-type(2) > div:nth-of-type(3n+3){
 	grid-column: var(--grid-column);
-	text-indent: 2em;
+	text-indent: var(--text-indent);
 }
 
 
@@ -100,7 +102,7 @@ section:nth-of-type(3) > div:nth-of-type(3n+2){
 }
 section:nth-of-type(3) > div:nth-of-type(3n+3){
 	grid-column: var(--grid-column);
-	text-indent: 2em;
+	text-indent: var(--text-indent);
 }
 
 /*Research Interests*/
