--- a/assets/main.css
+++ b/assets/main.css
@@ -58,6 +58,13 @@ section > div{
 	font-size: 16px;
 	line-height: 25px;
 }
+section > label{
+	background-color: #DDDDDD;
+	padding: 0px 10px;
+	font-size: 16px;
+	font-weight: bolder;
+	margin-left: 10px;
+}
 
 
 /*Personal Information*/
