--- a/assets/main.css
+++ b/assets/main.css
@@ -60,6 +60,13 @@ section > div{
 	font-size: 16px;
 	line-height: 25px;
 }
+section > p{
+	font-size: 16px;
+	line-height: 25px;
+	font-weight: bold; 
+	font-style: italic; 
+	padding: 5px 0px;
+}
 
 
 
