--- a/assets/main.css
+++ b/assets/main.css
@@ -36,6 +36,10 @@ a{
 	text-decoration: none;
 	color: inherit;
 }
+.resources{
+	font-style: italic; 
+	text-decoration: underline;
+}
 header{
 	border-bottom: 0px solid silver;
 }
