--- a/assets/main.css
+++ b/assets/main.css
@@ -39,6 +39,7 @@ a{
 .resources{
 	font-style: italic; 
 	text-decoration: underline;
+	font-size: 14px;
 }
 header{
 	border-bottom: 0px solid silver;
