--- a/assets/main.css
+++ b/assets/main.css
@@ -32,6 +32,51 @@ body{
 		--text-indent: 2em;
 	}
 }
+
+header{
+	border-bottom: 0px solid silver;
+	user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+header > img{
+	display: block;
+	width: 100%;
+	height: auto;
+}
+nav{
+	line-height: 60px;
+	font-size: 20px;
+	font-weight: bolder;
+	padding: 0px var(--nav-padding);
+	margin-top: 20px;
+	user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+section{
+	padding: 0px var(--section-padding);
+	font-size: 16px;
+	line-height: 25px;
+}
+section > div{
+	font-size: 16px;
+	line-height: 25px;
+}
+section > p{
+	font-size: 16px;
+	line-height: 25px;
+	font-weight: bold; 
+	font-style: italic; 
+	padding: 5px 0px;
+	user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
 a{
 	text-decoration: none;
 	color: inherit;
@@ -54,39 +99,6 @@ a{
 	content: '] ';
 	font-style: normal;
 }
-header{
-	border-bottom: 0px solid silver;
-}
-header > img{
-	display: block;
-	width: 100%;
-	height: auto;
-}
-nav{
-	line-height: 60px;
-	font-size: 20px;
-	font-weight: bolder;
-	padding: 0px var(--nav-padding);
-	margin-top: 20px;
-}
-section{
-	padding: 0px var(--section-padding);
-	font-size: 16px;
-	line-height: 25px;
-}
-section > div{
-	font-size: 16px;
-	line-height: 25px;
-}
-section > p{
-	font-size: 16px;
-	line-height: 25px;
-	font-weight: bold; 
-	font-style: italic; 
-	padding: 5px 0px;
-}
-
-
 
 /*Personal Information*/
 section:nth-of-type(1) {
@@ -231,4 +243,8 @@ footer{
 	line-height: 60px;
 	border-top: 1px solid silver;
 	margin-top: 150px;
+	user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
